# fileswarm

./: .gitignore  LICENSE  README.md  fileswarm.cabal  stack.yaml
app/: Main.hs
src/Data/: Bencoding.hs  Crypto.hs  MetaInfo.hs
src/Network/BitTorrent/: FileIO.hs  MetaInfo.hs  Peer.hs  PeerClient.hs  PeerServer.hs  State.hs  Status.hs  Tracker.hs  Types.hs  Util.hs
torrent_files/: debian-9.3.0-amd64-DVD-1.iso.torrent
