name:                fileswarm
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lisphacker/fileswarm#readme
license:             BSD3
license-file:        LICENSE
author:              Gautham Ganapathy
maintainer:          gautham@lisphacker.org
copyright:           (c) Gautham Ganapathy, 2017
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Data.Bencoding
                     , Data.MetaInfo
                     , Data.Crypto
                     , Network.BitTorrent.State
                     , Network.BitTorrent.Tracker
  other-modules:       
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.1.6 && < 0.2
                     , memory
                     , bytestring
                     , bytestring-conversion
                     , text
                     , attoparsec
                     , containers
                     , time
                     , old-locale
                     , http-conduit
                     , cryptonite
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable fileswarm
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fileswarm
                     , protolude >= 0.1.6 && < 0.2
                     , bytestring
                     , optparse-applicative
                     , optparse-text
                     , text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite fileswarm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fileswarm
                     , protolude >= 0.1.6 && < 0.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/lisphacker/fileswarm
